--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
     </style>
 </head>
 <body>
-    <header>header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul><li>
+                <a href="index.html">Home</a>
+            </li>
+                <li>
+                    <a href="#">Galary</a>
+                </li>
+            <li>
+            <a href="#">Sign Up</a>
+            </li>
+            </ul>
+        </nav>
+    </header>
     <section>main image</section>
     <section>club ethos</section>
     <section>Running loccation, distances and times</section>
